--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- This adds a title to the tab-->
   <title>Work Day Scheduler</title>
+
+  <!--Below are the links for: 
+  fonts
+  bootstrap
+  dayJS
+  jquery
+  CSS -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -23,15 +31,18 @@
 </head>
 
 <body>
-
+  <!-- Below provides the header and subheader -->
   <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
 
+  <!-- I used a section to contain all of our 'hours' in -->
   <section class="container-lg px-5 text-center">
 
+    <!-- Each div has a class and ID. We use the ID's to allow JS to pull the attributes and change the colours.
+    we put the hour, text area and save button in rows and columns using bootstaps styling-->
     <div class="row time-block" id="hour-08">
       <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
       <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -144,12 +155,11 @@
       </button>
     </div>
 
-
-
+    <!--We have added the clear button here in the HTML so we can pull it in JS -->
     <button id="clearFieldsBtn" type="button" class="btn btn-secondary clearBtn my-2">Clear</button>
 
   </section>
-
+  <!-- The JS script should always be called at the end of the body tag-->
   <script src="script.js"></script>
 </body>
 
