--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
@@ -123,44 +123,12 @@
       </button>
     </div>
 
-    <div class="row time-block" id="hour-18">
-      <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-        <i class="fas fa-save" aria-hidden="true"></i>
-      </button>
-    </div>
-
-    <div class="row time-block" id="hour-19">
-      <div class="col-2 col-md-1 hour text-center py-3">7PM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-        <i class="fas fa-save" aria-hidden="true"></i>
-      </button>
-    </div>
-
-    <div class="row time-block" id="hour-20">
-      <div class="col-2 col-md-1 hour text-center py-3">8pm</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-        <i class="fas fa-save" aria-hidden="true"></i>
-      </button>
-    </div>
-
-    <div class="row time-block" id="hour-21">
-      <div class="col-2 col-md-1 hour text-center py-3">9pm</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-      <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-        <i class="fas fa-save" aria-hidden="true"></i>
-      </button>
-    </div>
-
     <!--We have added the clear button here in the HTML so we can pull it in JS -->
     <button id="clearFieldsBtn" type="button" class="btn btn-secondary clearBtn my-2">Clear</button>
 
   </section>
   <!-- The JS script should always be called at the end of the body tag-->
-  <script src="script.js"></script>
+  <script src="assets/script.js"></script>
 </body>
 
 </html>
